# tdh-mordee-doctor-app

./: CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  bacon.toml  catalog-info.yaml  compose.yaml  deployment.yaml  firestore.indexes.json  justfile  k8s-deployment.yaml  manaul-build.sh  migrate.sh  release.yaml  rust.Dockerfile  rust.cloudbuild.yaml  rust.cloudbuild.yaml.bk
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs
crates/common/src/core/: error.rs  gcp_auth.rs  health.rs  mod.rs  telemetry.rs
crates/common/src/messaging/: cloud_tasks.rs  mod.rs  publisher.rs  pubsub_handler.rs
crates/common/src/notification/: fcm_token.rs  mod.rs  repo.rs
crates/common/src/patient/: mod.rs
crates/common/src/repo/: firebase_repo.rs  mod.rs
crates/tdh-protocol/python/: pyproject.toml
crates/tdh-protocol/python/scripts/: publish.sh
crates/tdh-protocol/python/tdh_protocol/: __init__.py
crates/tdh-protocol/python/tests/: test_serialization.py
crates/tdh-protocol/rust/: Cargo.toml  build.rs
crates/tdh-protocol/rust/.cargo/: config.toml
crates/tdh-protocol/rust/scripts/: publish.sh
crates/tdh-protocol/rust/src/: appointment_prost.rs  doctor_profile.rs  factial_verification.rs  internal.rs  lib.rs  notification.rs  onboarding.rs
crates/tdh-protocol/rust/src/appointment/: appointment_status.rs  appointment_type.rs  dolphin_appointment_request.rs  mod.rs  notify_doctor_action_message.rs  reserve.rs
crates/tdh-protocol/rust/src/biz_apm/: appointment.rs  common.rs  consultation_event.rs  follow_up.rs  mod.rs  summary_note.rs
crates/tdh-protocol/rust/src/biz_jade/: mod.rs  prescription.rs
crates/tdh-protocol/rust/src/common/: bigdecimal_utils.rs  doctor_profile.rs  localized.rs  medical_info.rs  meeting_provider.rs  mod.rs  patient_identity.rs  session_info.rs  time_range.rs
crates/tdh-protocol/rust/src/consultation/: appointment.rs  brief_status.rs  channel.rs  consultation_pre_screen.rs  doctor_session_info.rs  event.rs  mod.rs  patient_consultation_request.rs  patient_session_info.rs  session_action_message.rs  session_completed.rs  status.rs  wrapped_session_info.rs
crates/tdh-protocol/rust/src/doctor/: mod.rs  profile.rs  specialty.rs
crates/tdh-protocol/rust/src/gcp/: mod.rs  pubsub_dead_letter_message.rs  pubsub_push_message.rs
crates/tdh-protocol/rust/src/iam/: user_identity.rs
crates/tdh-protocol/rust/src/legacy/: mod.rs  timeslot.rs
crates/tdh-protocol/rust/src/payment/: extend_data.rs  insurance_discount.rs  localized.rs  mod.rs  payment_channel_result.rs  payment_message.rs  payment_summary.rs  payment_transaction.rs  product_cart.rs  selected_channel_result.rs
crates/tdh-protocol/rust/src/screenshot/: compose_request.rs  mod.rs
crates/tdh-protocol/rust/src/serde_compat/: consultation.rs  consultation_state.rs  mod.rs  notification.rs  ref_data.rs
crates/tdh-protocol/rust/src/timeslot/: booking_token.rs  mod.rs  reserve.rs  reserve_type.rs  timeslot.rs
crates/tdh-protocol/rust/tests/: integration_test.rs
server/: .dockerignore  Cargo.toml  firestore_indexes.json  openapi.json
server-bg/: Cargo.toml
server-bg/config/: default.toml
server-bg/src/: config.rs  lib.rs  main.rs
server-bg/src/infra/: fcm_service.rs
server-bg/src/module/: doctor_profile_outbox.rs  mod.rs
server-bg/src/module/doctor_calendar/: handler.rs  mod.rs  service.rs
server-bg/src/module/doctor_calendar/domain/: mod.rs  models.rs  (+2 more)
server-bg/src/module/doctor_notification/: handler.rs  mod.rs  service.rs
server-bg/tests/: consultation_notification_test.rs  doctor_profile_outbox_postgres_test.rs  doctor_profile_outbox_pubsub_emulator_test.rs
server/config/: default.toml  example.local.toml
server/src/: bootstrap.rs  lib.rs  main.rs  openapi.rs
server/src/core/: auth.rs  circuit_breaker.rs  dedup_cache.rs  error.rs  extractors.rs  gcp_auth.rs  gcs_signed_url.rs  health.rs  kms.rs  logging.rs  mod.rs  user_identity.rs
server/src/doctor_actor/: actor.rs  behaviour.rs  common.rs  mod.rs  model.rs  repo.rs
server/src/model/: appointment_status.rs  consultation_state.rs  doctor_specialty.rs  localize.rs  mod.rs  onboarding.rs  ref_data.rs  rtdb_appointment.rs  timeslot.rs
server/src/module/: mod.rs  profile_event_outbox.rs
server/src/module/appointment/: handler.rs  mapper.rs  mod.rs  model.rs  service.rs
server/src/module/backoffice/: consultation_configuration.rs  handlers.rs  mod.rs  repo.rs
server/src/module/consultation/: mod.rs  routes.rs  services.rs
server/src/module/ehr/: mod.rs
server/src/module/ekyc/: handlers.rs  mod.rs  service.rs
server/src/module/notification/: handlers.rs  mod.rs  repo.rs
server/src/module/onboarding/: handler.rs  mod.rs  repo.rs  service.rs  validation.rs
server/src/module/patient/: service.rs
server/src/module/profile/: common.rs  handler.rs  mod.rs  repo.rs
server/src/module/ranking/: cache.rs  handlers.rs  language.rs  mod.rs  models.rs  privilege.rs  repo.rs  subscriber.rs
server/src/module/timeslot/: common.rs  handler.rs  mod.rs  model.rs  repo.rs  service.rs
server/src/module/webhook/: mod.rs  publisher.rs
server/src/repo/: firebase_repo.rs  firestore_repo.rs  mod.rs
server/src/repo/model/: mod.rs
server/src/syst/: config.rs
server/tests/: appointment_logging_sanitization_test.rs  backoffice_onboarding_approve_test.rs  backoffice_pending_approval_test.rs  bootstrap_routes_test.rs  collection_verification_test.rs  consultation_event_test.rs  consultation_settings_test.rs  doctor_configuration_test.rs  doctor_id_v7_test.rs  ehr_past_visit_detail_repo_test.rs  ehr_past_visit_detail_test.rs  ehr_past_visit_history_test.rs  ekyc_test.rs  kms_approval_test.rs  my_available_timeslot_test.rs  notification_fcm_token_tests.rs  notification_tests.rs  onboarding_status_test.rs  onboarding_test.rs  profile_doctor_id_test.rs  ranking_test.rs  summarization_logging_sanitization_test.rs  summarization_test.rs  test_past_visit.http  test_past_visit.sh  webhook_publisher_test.rs
server/tests/common/: mod.rs
server/tests/fixtures/past_visit_detail/: doctor_profile_basic.json
(+274 files in other folders)
