[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tdh-protocol = { workspace = true }

anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
backoff = "0.4"
base64 = "0.22"
config = "0.14"
firestore = "0.47"
gcloud-sdk = { version = "0.28", features = ["google-firestore-v1"] }
google-cloud-auth = { version = "1", default-features = false, features = [
  "default-rustls-provider",
] }
google-cloud-googleapis = "0.16"
google-cloud-pubsub = "0.30"
jiff = { version = "0.2", features = ["serde"] }
opentelemetry = "0.28"
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "multipart",
  "rustls-tls",
] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "json",
  "derive",
  "uuid",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras", "jiff_0_2", "uuid"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }

[dev-dependencies]
wiremock = "0.6"
