[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tdh-protocol"
version = "0.1.0"
description = "TDH protocol buffers - generated Python code"
requires-python = ">=3.10"
dependencies = [
    "betterproto>=2.0.0",
    "grpcio>=1.60.0",
    "typing-extensions>=4.0",
]

[project.urls]
Repository = "https://github.com/tdh/tdh-protocol"

[tool.betterproto]
python_version = "3.10"

[tool.setuptools.packages.find]
where = ["."]
